# advent-of-code-2020

./: .gitignore  Cargo.toml  Makefile.toml  README.org
.github/workflows/: rust.yml
day-1/: main.jl
day-2/: main.rb
day-3/: Cargo.toml
day-3/src/: main.rs
src/: #day3.rs#  day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  day19.rs  day2.rs  day20.rs  day21.rs  day22.rs  day23.rs  day24.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs
src/util/: crt.rs  grid_2d.rs  mod.rs  weird_expr.rs
