[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Guilherme G. Haetinger <ghaetinger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time-test = "0.2.2"
itertools = "0.9.0"
permutohedron = "0.2.4"
